<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EncyclopediaActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textTile"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonLion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageButtonLion"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_lionlioness" />

    <ImageButton
        android:id="@+id/imageButtonBlueArrowFrog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageButtonBlueArrowFrog"
        android:cropToPadding="false"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonEmperorPenguin"
        app:layout_constraintStart_toEndOf="@+id/imageButtonLion"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_bluearrowfrog" />

    <ImageButton
        android:id="@+id/imageButtonEmperorPenguin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageButtonEmperorPenguin"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_emperorpenguin" />

    <ImageButton
        android:id="@+id/imageButtonLeatherbackTurtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageButtonLeatherbackTurtle"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonLion"
        app:srcCompat="@mipmap/ic_leatherbackturtle" />

    <ImageButton
        android:id="@+id/imageButtonOrchidMantis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageButtonOrchidMantis"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonWhiteShark"
        app:layout_constraintStart_toEndOf="@+id/imageButtonLeatherbackTurtle"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBlueArrowFrog"
        app:srcCompat="@mipmap/ic_orchidmantis" />

    <ImageButton
        android:id="@+id/imageButtonWhiteShark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/imageButtonWhiteShark"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:padding="0dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonEmperorPenguin"
        app:srcCompat="@mipmap/ic_whiteshark" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>